   EndMarked, and Waiting. This displays additional properties about the
   user's profile, as well as whether or not the user is waiting for a
   Marked user to enter the conference.

 * Added a new option for conference recording, record_file_append. If enabled,
   when the recording is stopped and then re-started, the existing recording
   will be used and appended to.

ControlPlayback
------------------
 * The channel variable CPLAYBACKSTATUS may now return the value
   'REMOTESTOPPED'. This occurs when playback is stopped by a remote interface,
   such as AMI. See the AMI action ControlPlayback for more information.

Directory
------------------
 * Added the 'a' option, which allows the caller to enter in an additional
   alias for the user in the directory. This option must be used in conjunction
   with the 'f', 'l', or 'b' options. Note that the alias for a user can be
   specified in voicemail.conf.

DumpChan
------------------
 * The output of DumpChan no longer includes the DirectBridge or IndirectBridge
   fields. Instead, if a channel is in a bridge, it includes a BridgeID field
   containing the unique ID of the bridge that the channel happens to be in.

ForkCDR
------------------
 * ForkCDR no longer automatically resets the forked CDR. See the 'r' option
   for more information.

 * Variables are no longer purged from the original CDR. See the 'v' option for
   more information.

 * The 'A' option has been removed. The Answer time on a CDR is never updated
   once set.

 * The 'd' option has been removed. The disposition on a CDR is a function of
   the state of the channel and cannot be altered.

 * The 'D' option has been removed. Who the Party B is on a CDR is a function
   of the state of the respective channels involved in the CDR and cannot be
   altered.

 * The 'r' option has been changed. Previously, ForkCDR always reset the CDR
   such that the start time and, if applicable, the answer time was updated.